# g2cam

./: .gitignore  LICENSE.txt  README.txt  pyproject.toml  setup.cfg  setup.py
cams/: SIMCAM.py
doc/: Makefile  g2cam.tex
examples/: README.rst  fetch_status.py  stream_status.py
examples/cams/: SIMCAM.py
g2base/: Bunch.py  Callback.py  Task.py  myproc.py  ssdlog.py
g2base/alarm/: notifications.py  simple_alarms.py
g2base/astro/: frame.py  radec.py  sla.py  subaru.py  wcs.py
g2base/remoteObjects/: Monitor.py  Monitor2.py  NestedBunch.py  PubSub.py  Timer.py  ZMQRPCTypes.py  __init__.py  exceptions.py  heaptimer.py  pub_sub.py  remoteObjectManagerSvc.py  remoteObjectNameSvc.py  remoteObjects.py  ro_XMLRPC.py  ro_ZMQRPC.py  ro_codec.py  ro_config.py  ro_example.py  ro_mgr.py  ro_ms.py  ro_ns.py  ro_packer.py  ro_pubsub.py  ro_socket.py  ro_test.py  ro_transport.py  testfunc_RemoteObjects.py
g2base/remoteObjects/bench/: test_recv.py  test_send.py
g2base/remoteObjects/packers/: pack_json.py  pack_msgpack.py  pack_pickle.py  pack_xml.py
g2base/remoteObjects/pubsubs/: __init__.py  pubsub_nats.py  pubsub_redis.py  pubsub_zmq.py
g2base/remoteObjects/secure/: sec_fernet.py
g2base/remoteObjects/transports/: ro_XMLRPC.py  ro_generic.py  ro_redis.py  ro_socket.py
g2cam/: INS.py  Instrument.py  version.py
g2cam/status/: client.py  common.py  stream.py
g2cam/util/: common_task.py  make_release.py
scripts/: g2cam  get_status  mkbulk  ro_mgr_svc  ro_name_svc  ro_ps_svc  ro_shell  ro_test.py  stubgen
