[metadata]
name = g2cam
description = A toolkit for interfacing with the Subaru Telescope Observation Control System.
long_description = file: README.txt
long_description_content_type = text/plain
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.txt
url = https://github.com/naojsoft/g2cam
edit_on_github = False
github_project = naojsoft/g2cam
keywords = subaru, telescope, instrument, toolkit, interface
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    pymongo>=3.12.0
    redis>=3.5.3
    pyyaml>=5.3.1
setup_requires =
    setuptools_scm
include_package_data = False
scripts =
    scripts/g2cam
    scripts/stubgen
    scripts/ro_shell
    scripts/ro_mgr_svc
    scripts/ro_name_svc
    scripts/ro_ps_svc
    scripts/get_status

